Run GHA test workflow on LTS JDK versions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,17 +4,20 @@ on:
   pull_request:
 jobs:
   test:
+    strategy:
+      matrix:
+        jdk: [ 8, 11, 17, 21 ] # lts releases
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-      - name: Set up JDK 8
+      - name: Set up JDK ${{ matrix.jdk }}
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '8'
+          java-version: ${{ matrix.jdk }}
       - name: Build modules
         run: ./ant modbuild
       - name: Build JAR
