--- a/mod/settings.gradle
+++ b/mod/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = "jingtrang"
 
-include ':util', ':resolver', ':datatype', ':catalog'
+include ':util', ':resolver', ':datatype', ':catalog', ':dtd-parse'
