Add regex build

--- a/mod/settings.gradle
+++ b/mod/settings.gradle
@@ -6,6 +6,7 @@ include ':datatype'
 include ':catalog'
 include ':dtd-parse'
 include ':jaxp'
+include ':regex'
 include ':regex-gen'
 include ':validate'
 include ':xerces'
