Add pattern build

--- a/mod/settings.gradle
+++ b/mod/settings.gradle
@@ -4,6 +4,7 @@ include ':catalog'
 include ':datatype'
 include ':dtd-parse'
 include ':jaxp'
+include ':pattern'
 include ':regex'
 include ':regex-gen'
 include ':resolver'
