--- a/mod/settings.gradle
+++ b/mod/settings.gradle
@@ -9,6 +9,7 @@ include ':regex'
 include ':regex-gen'
 include ':resolver'
 include ':rng-parse'
+include ':rng-schema'
 include ':rng-validate'
 include ':util'
 include ':validate'
