--- a/mod/settings.gradle
+++ b/mod/settings.gradle
@@ -8,6 +8,7 @@ include ':pattern'
 include ':regex'
 include ':regex-gen'
 include ':resolver'
+include ':rng-jaxp'
 include ':rng-parse'
 include ':rng-schema'
 include ':rng-validate'
