--- a/mod/settings.gradle
+++ b/mod/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = "jingtrang"
 
 include ':catalog'
+include ':convert-to-dtd'
 include ':convert-to-xsd'
 include ':datatype'
 include ':dtd-parse'
