--- a/mod/settings.gradle
+++ b/mod/settings.gradle
@@ -7,6 +7,7 @@ include ':convert-to-dtd'
 include ':convert-to-xsd'
 include ':datatype'
 include ':dtd-parse'
+include ':infer'
 include ':jaxp'
 include ':pattern'
 include ':regex'
