--- a/mod/settings.gradle
+++ b/mod/settings.gradle
@@ -2,7 +2,7 @@ rootProject.name = "jingtrang"
 
 include ':catalog'
 include ':convert-from-dtd'
-//include ':convert-from-xml'
+include ':convert-from-xml'
 include ':convert-to-dtd'
 include ':convert-to-xsd'
 include ':datatype'
