--- a/mod/settings.gradle
+++ b/mod/settings.gradle
@@ -11,6 +11,7 @@ include ':infer'
 include ':jaxp'
 include ':nvdl'
 include ':pattern'
+include ':picl'
 include ':regex'
 include ':regex-gen'
 include ':resolver'
