Add schematron build

--- a/mod/settings.gradle
+++ b/mod/settings.gradle
@@ -20,6 +20,7 @@ include ':rng-jaxp'
 include ':rng-parse'
 include ':rng-schema'
 include ':rng-validate'
+include ':schematron'
 include ':util'
 include ':validate'
 include ':xerces'
