--- a/mod/settings.gradle
+++ b/mod/settings.gradle
@@ -9,6 +9,7 @@ include ':datatype'
 include ':dtd-parse'
 include ':infer'
 include ':jaxp'
+include ':jing'
 include ':nvdl'
 include ':pattern'
 include ':picl'
