--- a/mod/schematron/build.gradle
+++ b/mod/schematron/build.gradle
@@ -49,3 +49,32 @@ tasks.register('generateServices') {
     }
 }
 processResources.dependsOn(generateServices)
+
+// FIXME
+// <ant rescompile="mod.schematron.compile-res">
+//    <target name="mod.schematron.compile-res">
+//      <property name="mod.schematron.respackage" value="com/thaiopensource/validate/schematron/resources"/>
+//      <property name="mod.schematron.resdir" value="${build.dir}/mod/schematron/classes/main/${mod.schematron.respackage}"/>
+//      <mkdir dir="${mod.schematron.resdir}"/>
+//      <xslt style="mod/schematron/lib/xsltc-fixup.xsl"
+//	          in="mod/schematron/src/main/${mod.schematron.respackage}/schematron.xsl"
+//	          out="${mod.schematron.resdir}/schematron-xsltc.xsl">
+//	      <factory name="net.sf.saxon.TransformerFactoryImpl"/>
+//        <classpath>
+//          <fileset dir="lib">
+//            <filename name="saxon9.jar"/>
+//          </fileset>
+//        </classpath>
+//      </xslt>
+//      <xslt style="mod/schematron/lib/xsltc-fixup.xsl"
+//            in="mod/schematron/src/main/${mod.schematron.respackage}/iso-schematron.xsl"
+//            out="${mod.schematron.resdir}/iso-schematron-xsltc.xsl">
+//        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
+//        <classpath>
+//          <fileset dir="lib">
+//            <filename name="saxon9.jar"/>
+//          </fileset>
+//        </classpath>
+//      </xslt>
+//    </target>
+//  </ant>
