Add trang build

--- a/mod/settings.gradle
+++ b/mod/settings.gradle
@@ -22,6 +22,7 @@ include ':rng-parse'
 include ':rng-schema'
 include ':rng-validate'
 include ':schematron'
+include ':trang'
 include ':util'
 include ':validate'
 include ':xerces'
