Add dtdinst build

--- a/mod/settings.gradle
+++ b/mod/settings.gradle
@@ -7,6 +7,7 @@ include ':convert-to-dtd'
 include ':convert-to-xsd'
 include ':datatype'
 include ':dtd-parse'
+include ':dtdinst'
 include ':infer'
 include ':jaxp'
 include ':jing'
