--- a/mod/schematron/build.gradle
+++ b/mod/schematron/build.gradle
@@ -34,18 +34,25 @@ sourceSets {
 }
 
 tasks.register('generateServices') {
-    def serviceFile = file("${buildDir}/generated/sources/resources/main/META-INF/services/com.thaiopensource.validate.SchemaReaderFactory")
+    def services = [
+            'com.thaiopensource.validate.SchemaReaderFactory': [
+                    'com.thaiopensource.validate.schematron.NewSaxonSchemaReaderFactory',
+                    'com.thaiopensource.validate.schematron.OldSaxonSchemaReaderFactory',
+                    'com.thaiopensource.validate.schematron.XalanSchemaReaderFactory',
+                    'com.thaiopensource.validate.schematron.SchematronSchemaReaderFactory',
+            ]
+    ]
 
-    outputs.file(serviceFile)
+    outputs.files services.collect { entry -> file("${buildDir}/generated/sources/resources/main/META-INF/services/${entry.key}") }
 
     doLast {
-        serviceFile.parentFile.mkdirs()
-        serviceFile.text = [
-                'com.thaiopensource.validate.schematron.NewSaxonSchemaReaderFactory',
-                'com.thaiopensource.validate.schematron.OldSaxonSchemaReaderFactory',
-                'com.thaiopensource.validate.schematron.XalanSchemaReaderFactory',
-                'com.thaiopensource.validate.schematron.SchematronSchemaReaderFactory',
-        ].join('\n')
+        services.each { entry ->
+            {
+                def serviceFile = file("${buildDir}/generated/sources/resources/main/META-INF/services/${entry.key}")
+                serviceFile.parentFile.mkdirs()
+                serviceFile.text = entry.value.join('\n')
+            }
+        }
     }
 }
 processResources.dependsOn(generateServices)
