--- a/mod/xsd-datatype/build.gradle
+++ b/mod/xsd-datatype/build.gradle
@@ -31,15 +31,22 @@ sourceSets {
 }
 
 tasks.register('generateServices') {
-    def serviceFile = file("${buildDir}/generated/sources/resources/main/META-INF/services/org.relaxng.datatype.DatatypeLibraryFactory")
+    def services = [
+            'org.relaxng.datatype.DatatypeLibraryFactory': [
+                    'com.thaiopensource.datatype.xsd.DatatypeLibraryFactoryImpl'
+            ],
+    ]
 
-    outputs.file(serviceFile)
+    outputs.files services.collect { entry -> file("${buildDir}/generated/sources/resources/main/META-INF/services/${entry.key}") }
 
     doLast {
-        serviceFile.parentFile.mkdirs()
-        serviceFile.text = [
-                'com.thaiopensource.datatype.xsd.DatatypeLibraryFactoryImpl',
-        ].join('\n')
+        services.each { entry ->
+            {
+                def serviceFile = file("${buildDir}/generated/sources/resources/main/META-INF/services/${entry.key}")
+                serviceFile.parentFile.mkdirs()
+                serviceFile.text = entry.value.join('\n')
+            }
+        }
     }
 }
 processResources.dependsOn(generateServices)
