--- a/mod/catalog/build.gradle
+++ b/mod/catalog/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation project(':util')
     implementation project(':resolver')
     implementation group: 'xml-resolver', name: 'xml-resolver', version: '1.2'
+    testImplementation group: 'org.testng', name: 'testng', version: '7.8.0'
 }
 
 // ??? <test name="unit" type="testng"/>
