--- a/mod/pattern/build.gradle
+++ b/mod/pattern/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation project(':resolver')
     implementation project(':datatype')
     implementation project(':rng-parse')
+    testImplementation group: 'org.testng', name: 'testng', version: '7.8.0'
 }
 
 sourceSets {
