--- a/mod/xsd-datatype/build.gradle
+++ b/mod/xsd-datatype/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation project(':util')
     implementation project(':datatype')
     implementation project(':regex')
+    testImplementation group: 'org.testng', name: 'testng', version: '7.8.0'
 }
 
 sourceSets {
