Refactor trang to build fat JAR

--- a/mod/jing/build.gradle
+++ b/mod/jing/build.gradle
@@ -52,10 +52,7 @@ shadowJar {
 //    archiveClassifier = ''
 //    archiveVersion = rootProject.version
 }
-
-tasks.build {
-    dependsOn shadowJar
-}
+build.dependsOn shadowJar
 
 jar {
     enabled = false
