--- a/mod/infer/build.gradle
+++ b/mod/infer/build.gradle
@@ -4,7 +4,6 @@ dependencies {
     implementation project(':datatype')
     implementation project(':xsd-datatype')
     implementation project(':regex')
-    testImplementation group: 'org.testng', name: 'testng', version: '7.8.0'
 }
 
 sourceSets {
@@ -16,6 +15,9 @@ sourceSets {
     test {
         java {
             srcDir 'src/test'
+        }
+        resources {
+            srcDir 'build/resources/test'
         }
     }
 }
