--- a/mod/util/build.gradle
+++ b/mod/util/build.gradle
@@ -1,5 +1,4 @@
 dependencies {
-    testImplementation group: 'org.testng', name: 'testng', version: '7.8.0'
 }
 
 sourceSets {
@@ -11,6 +10,9 @@ sourceSets {
     test {
         java {
             srcDir 'src/test'
+        }
+        resources {
+            srcDir 'build/resources/test'
         }
     }
 }
