--- a/mod/rng-jaxp/build.gradle
+++ b/mod/rng-jaxp/build.gradle
@@ -7,7 +7,6 @@ dependencies {
     implementation project(':rng-parse')
     implementation project(':pattern')
     implementation project(':jaxp')
-    testImplementation group: 'org.testng', name: 'testng', version: '7.8.0'
 }
 
 sourceSets {
@@ -19,6 +18,9 @@ sourceSets {
     test {
         java {
             srcDir 'src/test'
+        }
+        resources {
+            srcDir 'build/resources/test'
         }
     }
 }
