--- a/mod/xsd-datatype/build.gradle
+++ b/mod/xsd-datatype/build.gradle
@@ -2,7 +2,6 @@ dependencies {
     implementation project(':util')
     implementation project(':datatype')
     implementation project(':regex')
-    testImplementation group: 'org.testng', name: 'testng', version: '7.8.0'
 }
 
 sourceSets {
@@ -17,6 +16,9 @@ sourceSets {
     test {
         java {
             srcDir 'src/test'
+        }
+        resources {
+            srcDir 'build/resources/test'
         }
     }
 }
