--- a/mod/jing/build.gradle
+++ b/mod/jing/build.gradle
@@ -46,11 +46,69 @@ jar {
     }
 }
 
-shadowJar {
+tasks.shadowJar {
     archiveFileName = "${project.name}.jar"
 //    archiveBaseName = project.name
 //    archiveClassifier = ''
 //    archiveVersion = rootProject.version
+
+    configurations = [project.configurations.runtimeClasspath]
+
+    from(project(':util').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':resolver').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':catalog').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':regex').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':datatype').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':xsd-datatype').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':rng-parse').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':pattern').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':jaxp').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':rng-jaxp').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':rng-validate').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':nvdl').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':schematron').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':xerces').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':picl').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':rng-jarv').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+    from(project(':validate').sourceSets.main.output) {
+        exclude('META-INF/services/*')
+    }
+
+    dependencies {
+        exclude(dependency('.*:.*'))
+    }
 }
 build.dependsOn shadowJar
 
@@ -70,9 +128,46 @@ tasks.register('generateVersion') {
 }
 processResources.dependsOn(generateVersion)
 
-//    <service type="com.thaiopensource.datatype.xsd.regex.RegexEngine"/>
-//    <service type="org.relaxng.datatype.DatatypeLibraryFactory"/>
-//    <service type="org.iso_relax.verifier.VerifierFactoryLoader"/>
-//    <service type="com.thaiopensource.validate.SchemaReaderFactory"/>
-//    <service type="com.thaiopensource.validate.auto.SchemaReceiverFactory"/>
-//
+tasks.register('generateServices') {
+    def services = [
+            'com.thaiopensource.datatype.xsd.regex.RegexEngine'     : [
+                    'com.thaiopensource.datatype.xsd.regex.java.RegexEngineImpl',
+                    'com.thaiopensource.datatype.xsd.regex.xerces2.RegexEngineImpl',
+            ],
+            'org.relaxng.datatype.DatatypeLibraryFactory'           : [
+                    'com.thaiopensource.datatype.xsd.DatatypeLibraryFactoryImpl',
+            ],
+            'org.iso_relax.verifier.VerifierFactoryLoader'          : [
+                    'com.thaiopensource.relaxng.jarv.VerifierFactoryLoaderImpl',
+            ],
+            'com.thaiopensource.validate.SchemaReaderFactory'       : [
+                    'com.thaiopensource.validate.schematron.NewSaxonSchemaReaderFactory',
+                    'com.thaiopensource.validate.schematron.OldSaxonSchemaReaderFactory',
+                    'com.thaiopensource.validate.schematron.XalanSchemaReaderFactory',
+                    'com.thaiopensource.validate.schematron.SchematronSchemaReaderFactory',
+                    'com.thaiopensource.validate.xerces.XsdSchemaReaderFactory',
+                    'com.thaiopensource.validate.jarv.JarvSchemaReaderFactory',
+            ],
+            'com.thaiopensource.validate.auto.SchemaReceiverFactory': [
+                    'com.thaiopensource.validate.rng.SAXSchemaReceiverFactory',
+                    'com.thaiopensource.validate.nvdl.NvdlSchemaReceiverFactory',
+                    'com.thaiopensource.validate.nrl.NrlSchemaReceiverFactory',
+                    'com.thaiopensource.validate.mns.MnsSchemaReceiverFactory',
+                    'com.thaiopensource.validate.picl.PiclSchemaReceiverFactory',
+                    'com.thaiopensource.validate.auto.SchemaReaderLoaderSchemaReceiverFactory',
+            ],
+    ]
+
+    outputs.files services.collect { entry -> file("${buildDir}/generated/sources/resources/main/META-INF/services/${entry.key}") }
+
+    doLast {
+        services.each { entry ->
+            {
+                def serviceFile = file("${buildDir}/generated/sources/resources/main/META-INF/services/${entry.key}")
+                serviceFile.parentFile.mkdirs()
+                serviceFile.text = entry.value.join('\n')
+            }
+        }
+    }
+}
+processResources.dependsOn(generateServices)
