--- a/mod/catalog/build.gradle
+++ b/mod/catalog/build.gradle
@@ -15,7 +15,7 @@ sourceSets {
             srcDir 'src/test'
         }
         resources {
-            srcDir 'build/resources/test'
+            srcDir 'src/test'
         }
     }
 }
