Refactor build scripts

--- a/mod/dtdinst/build.gradle
+++ b/mod/dtdinst/build.gradle
@@ -37,7 +37,7 @@ shadowJar {
 //    archiveClassifier = ''
 //    archiveVersion = rootProject.version
 }
-build.dependsOn shadowJar
+tasks.build.dependsOn tasks.named('shadowJar')
 
 jar {
     enabled = false
@@ -53,7 +53,7 @@ tasks.register('generateVersion') {
         propertyFile.text = "version=${project.version}"
     }
 }
-processResources.dependsOn(generateVersion)
+processResources.dependsOn tasks.named("generateVersion")
 
 tasks.register('generateServices') {
     def services = [
@@ -78,4 +78,4 @@ tasks.register('generateServices') {
         }
     }
 }
-processResources.dependsOn(generateServices)
+processResources.dependsOn tasks.named("generateServices")
