--- a/mod/jing/build.gradle
+++ b/mod/jing/build.gradle
@@ -110,7 +110,7 @@ tasks.shadowJar {
         exclude(dependency('.*:.*'))
     }
 }
-build.dependsOn shadowJar
+tasks.build.dependsOn tasks.named('shadowJar')
 
 jar {
     enabled = false
@@ -126,7 +126,7 @@ tasks.register('generateVersion') {
         propertyFile.text = "version=${project.version}"
     }
 }
-processResources.dependsOn(generateVersion)
+processResources.dependsOn tasks.named("generateVersion")
 
 tasks.register('generateServices') {
     def services = [
@@ -170,4 +170,4 @@ tasks.register('generateServices') {
         }
     }
 }
-processResources.dependsOn(generateServices)
+processResources.dependsOn tasks.named("generateServices")
