--- a/mod/picl/build.gradle
+++ b/mod/picl/build.gradle
@@ -39,4 +39,4 @@ tasks.register('generateServices') {
         }
     }
 }
-processResources.dependsOn(generateServices)
+processResources.dependsOn tasks.named("generateServices")
