--- a/mod/regex/build.gradle
+++ b/mod/regex/build.gradle
@@ -72,4 +72,4 @@ tasks.register('generateServices') {
         }
     }
 }
-processResources.dependsOn(generateServices)
+processResources.dependsOn tasks.named("generateServices")
