--- a/mod/rng-validate/build.gradle
+++ b/mod/rng-validate/build.gradle
@@ -45,4 +45,4 @@ tasks.register('generateServices') {
         }
     }
 }
-processResources.dependsOn(generateServices)
+processResources.dependsOn tasks.named("generateServices")
