--- a/mod/validate/build.gradle
+++ b/mod/validate/build.gradle
@@ -40,4 +40,4 @@ tasks.register('generateServices') {
         }
     }
 }
-processResources.dependsOn(generateServices)
+processResources.dependsOn tasks.named("generateServices")
