--- a/mod/nvdl/build.gradle
+++ b/mod/nvdl/build.gradle
@@ -42,4 +42,4 @@ tasks.register('generateServices') {
         }
     }
 }
-processResources.dependsOn(generateServices)
+processResources.dependsOn tasks.named("generateServices")
