--- a/mod/dtdinst/build.gradle
+++ b/mod/dtdinst/build.gradle
@@ -79,3 +79,12 @@ tasks.register('generateServices') {
     }
 }
 processResources.dependsOn tasks.named("generateServices")
+
+tasks.register('dist', Zip) {
+    dependsOn(tasks.named('shadowJar'))
+    archiveFileName = "${buildDir}/dist/${project.name}-${project.version}.zip"
+    from(tasks.shadowJar)
+    from('../../dtdinst') {
+        filter { it.replace('@VERSION@', project.version) }
+    }
+}
