--- a/mod/jing/build.gradle
+++ b/mod/jing/build.gradle
@@ -174,7 +174,7 @@ processResources.dependsOn tasks.named("generateServices")
 
 tasks.register('dist', Zip) {
     dependsOn(tasks.named('shadowJar'))
-    archiveFileName = "${buildDir}/dist/${project.name}-${project.version}.zip"
+    archiveFileName = "${file(distsDirectory)}/${project.name}-${project.version}.zip"
     from(tasks.shadowJar) {
         into 'bin'
     }
@@ -226,3 +226,4 @@ tasks.register('dist', Zip) {
         exclude('**/*.rnc')
     }
 }
+assemble.dependsOn(tasks.named('dist'))
