--- a/mod/trang/build.gradle
+++ b/mod/trang/build.gradle
@@ -115,10 +115,11 @@ processResources.dependsOn tasks.named("generateServices")
 
 tasks.register('dist', Zip) {
     dependsOn(tasks.named('shadowJar'))
-    archiveFileName = "${buildDir}/dist/${project.name}-${project.version}.zip"
+    archiveFileName = "${file(distsDirectory)}/${project.name}-${project.version}.zip"
     from(tasks.shadowJar)
     from('../../trang/doc/trang-manual.html') {
         filter { it.replace('@VERSION@', project.version) }
     }
     from '../../copying.txt'
 }
+assemble.dependsOn(tasks.named('dist'))
