Remove rng-jarv from jing.jar and add as separate JAR in dist

--- a/mod/rng-jarv/build.gradle
+++ b/mod/rng-jarv/build.gradle
@@ -23,6 +23,10 @@ sourceSets {
     }
 }
 
+jar {
+    archiveFileName = "${project.name}.jar"
+}
+
 tasks.register('generateServices') {
     def services = [
             'org.iso_relax.verifier.VerifierFactoryLoader': [
