--- a/mod/jing/build.gradle
+++ b/mod/jing/build.gradle
@@ -42,7 +42,7 @@ jar {
     manifest {
         attributes(
                 'Main-Class': 'com/thaiopensource/relaxng/util/Driver',
-                'Class-Path': 'saxon9.jar xalan.jar isorelax.jar resolver.jar')
+                'Class-Path': "saxon9.jar xalan.jar isorelax.jar resolver.jar rng-jarv.jar")
     }
 }
 
@@ -99,9 +99,9 @@ shadowJar {
     from(project(':picl').sourceSets.main.output) {
         exclude('META-INF/services/*')
     }
-    from(project(':rng-jarv').sourceSets.main.output) {
-        exclude('META-INF/services/*')
-    }
+//    from(project(':rng-jarv').sourceSets.main.output) {
+//        exclude('META-INF/services/*')
+//    }
     from(project(':validate').sourceSets.main.output) {
         exclude('META-INF/services/*')
     }
@@ -137,9 +137,9 @@ tasks.register('generateServices') {
             'org.relaxng.datatype.DatatypeLibraryFactory'           : [
                     'com.thaiopensource.datatype.xsd.DatatypeLibraryFactoryImpl',
             ],
-            'org.iso_relax.verifier.VerifierFactoryLoader'          : [
-                    'com.thaiopensource.relaxng.jarv.VerifierFactoryLoaderImpl',
-            ],
+//            'org.iso_relax.verifier.VerifierFactoryLoader'          : [
+//                    'com.thaiopensource.relaxng.jarv.VerifierFactoryLoaderImpl',
+//            ],
             'com.thaiopensource.validate.SchemaReaderFactory'       : [
                     'com.thaiopensource.validate.schematron.NewSaxonSchemaReaderFactory',
                     'com.thaiopensource.validate.schematron.OldSaxonSchemaReaderFactory',
@@ -176,6 +176,12 @@ tasks.register('dist', Zip) {
     dependsOn(tasks.named('shadowJar'))
     archiveFileName = "${file(distsDirectory)}/${project.name}-${project.version}.zip"
     from(tasks.shadowJar) {
+        into 'bin'
+    }
+//    from(project(':rng-jarv').configuration.runtimeClasspath.allArtifacts.files) {
+//        into 'bin'
+//    }
+    from(project(':rng-jarv').tasks.jar) {
         into 'bin'
     }
     from('../../lib') {
