--- a/mod/rng-parse/build.gradle
+++ b/mod/rng-parse/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
     implementation project(':util')
     implementation project(':resolver')
-    implementation project(':datatype')
+    implementation project(':xsd-datatype')
 }
 
 sourceSets {
